--- a/index.html
+++ b/index.html
@@ -89,99 +89,69 @@
 		</script>
 		<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' >
 		<link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-	<div class="container" style="position: fixed;width:1035px;margin-top:30px">
-<img id="ball" class="ball" src="giphy.gif">
-<div class="blockR" id="block0" ></div>
-<div class="blockU" id="block"  ></div>
-
-<div class="blockU" id="block1"></div>
-
-<div class="blockR" id="block3"></div>
-<div class="blockU" id="block4"></div>
-<!--div class="blockR" id="block5"></div-->
-<div class="blockR" id="block6"></div>
-<div class="blockR" id="block8"></div>
-
-<div class="blockU" id="block7"></div>
-
-
-<div class="blockR" id="block9"></div>
-
-<div class="blockU" id="block10"></div>
-
-<div class="blockR" id="block11"></div>
-
-
-<div class="blockU" id="block12"></div>
-
-<div class="blockR" id="block13"></div>
-<div class="blockU" id="block14"></div>
-
-
-<div class="blockR" id="block15"></div>
-
-<div class="blockU" id="block16"></div>
-
-
-<div class="blockR" id="block17"></div>
-
-<div class="blockR" id="block18"></div>
-	
-
-<div class="blockR" id="block19"></div>
-
-<div class="blockU" id="block20"></div>
-	
-	
-<div class="blockR" id="block21"></div>
-<div class="blockR" id="block22"></div>
-<div class="blockU" id="block23"></div>
-<div class="blockR" id="block24"></div>
-<div class="blockU" id="block25"></div>
-<div class="blockR" id="block26"></div>
-	
-<div class="blockU" id="block27"></div>
-<div class="blockR" id="block28"></div>
-		
-<div class="blockU" id="block29"></div>
-	
-<div class="blockR" id="block30"></div>
-<div class="blockU" id="block31"></div>
-<div class="blockR" id="block32"></div>
-
-<div class="blockR" id="block33"></div>
-
-
-
-<div class="dest" id="dest"></div>
-
-
-
-
-
-	</div>
-<div class="scoreboard" style="margin-top:30px;position: fixed;margin-left: 77%;width:20%;">
-		<h2>Directions</h2>
-		<div class="buttons">
-<button style="margin-left:64px;margin-bottom:3px;"class="up" id="up"><i class='fas fa-chevron-up'></i></button>
-<br>
-<button class="left" id="left" style="margin-right:0px"><i class='fas fa-chevron-left'></i></button>
-<button class="bottom" id="bottom"><i class='fas fa-chevron-down'></i></button>
-<button class="right" id="right"><i class='fas fa-chevron-right'></i></button>
-	</div><br><br><br>
-	<div class="score">
-<fieldset>		<legend>SCORES</legend>
-		<p id="pn1">PLAYER 1</p>
-		<input type="text" id="p1" value="0" class="countp1" readonly>
-		<p id="pn2">PLAYER 2</p>
-		<input type="text" id="p2" value="0" readonly>
-		</fieldset></div>
-		<div id="slide" style="background-color: green;">
-		<h2 id="display"></h2>
-<button id="reset" style="width:250px;font-size:29px;margin-left:11px;">RESTART</button></div>
-</div>
-
+	</head>
+	<body>
+		<div class="container" style="position: fixed;width:1035px;margin-top:30px">
+			<img id="ball" class="ball" src="giphy.gif">
+			<div class="blockR" id="block0" ></div>
+			<div class="blockU" id="block"  ></div>
+			<div class="blockU" id="block1"></div>
+			<div class="blockR" id="block3"></div>
+			<div class="blockU" id="block4"></div>
+			<!--div class="blockR" id="block5"></div-->
+			<div class="blockR" id="block6"></div>
+			<div class="blockR" id="block8"></div>
+			<div class="blockU" id="block7"></div>
+			<div class="blockR" id="block9"></div>
+			<div class="blockU" id="block10"></div>
+			<div class="blockR" id="block11"></div>
+			<div class="blockU" id="block12"></div>
+			<div class="blockR" id="block13"></div>
+			<div class="blockU" id="block14"></div>
+			<div class="blockR" id="block15"></div>
+			<div class="blockU" id="block16"></div>
+			<div class="blockR" id="block17"></div>
+			<div class="blockR" id="block18"></div>
+			<div class="blockR" id="block19"></div>
+			<div class="blockU" id="block20"></div>
+			<div class="blockR" id="block21"></div>
+			<div class="blockR" id="block22"></div>
+			<div class="blockU" id="block23"></div>
+			<div class="blockR" id="block24"></div>
+			<div class="blockU" id="block25"></div>
+			<div class="blockR" id="block26"></div>	
+			<div class="blockU" id="block27"></div>
+			<div class="blockR" id="block28"></div>		
+			<div class="blockU" id="block29"></div>	
+			<div class="blockR" id="block30"></div>
+			<div class="blockU" id="block31"></div>
+			<div class="blockR" id="block32"></div>
+			<div class="blockR" id="block33"></div>
+			<div class="dest" id="dest"></div>
+		</div>
+		<div class="scoreboard" style="margin-top:30px;position: fixed;margin-left: 77%;width:20%;">
+			<h2>Directions</h2>
+			<div class="buttons">
+				<button style="margin-left:64px;margin-bottom:3px;"class="up" id="up"><i class='fas fa-chevron-up'></i></button>
+				<br>
+				<button class="left" id="left" style="margin-right:0px"><i class='fas fa-chevron-left'></i></button>
+				<button class="bottom" id="bottom"><i class='fas fa-chevron-down'></i></button>
+				<button class="right" id="right"><i class='fas fa-chevron-right'></i></button>
+			</div>
+			<br><br><br>
+			<div class="score">
+				<fieldset>
+					<legend>SCORES</legend>
+					<p id="pn1">PLAYER 1</p>
+					<input type="text" id="p1" value="0" class="countp1" readonly>
+					<p id="pn2">PLAYER 2</p>
+					<input type="text" id="p2" value="0" readonly>
+				</fieldset>
+			</div>
+			<div id="slide" style="background-color: green;">
+				<h2 id="display"></h2>
+				<button id="reset" style="width:250px;font-size:29px;margin-left:11px;">RESTART</button>
+			</div>
+		</div>
 	</body>
-	</html>
+</html>
