--- a/index.html
+++ b/index.html
@@ -1,157 +1,76 @@
 <!doctype html>
 <html>
-	<head>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script>
-		var p1=0,p2=0,count1=0,turn=0;
-		if(turn==0) {
-			$(".countp1").addClass("countp1");
-		}
-		var pn1=prompt("Enter Player 1 name");
-		var pn2=prompt("Enter Player 2 name");
-		$(document).ready(function(){
-			$("#pn1").text(pn1);
-			$("#pn2").text(pn2);
-			$("#slide").hide(); 
-			$("#right").click(function(){
-				$("#ball").animate({left:'+=36px'});
-				count1+=1;
-				$(".countp1").val(count1);
-				check();
-			});
-			$("#bottom").click(function(){
-				$("#ball").animate({top:'+=36px'});
-				count1+=1;
-				$(".countp1").val(count1);
-					check();
-				});
-				$("#up").click(function(){
-					$("#ball").animate({top:'-=36px'});
-					count1+=1;
-					$(".countp1").val(count1);
-					check();
-				});
-				$("#left").click(function(){
-					$("#ball").animate({left:'-=36px'});
-					count1+=1;
-					$(".countp1").val(count1);
-					check();
-				});
-				$("#reset").click(function(){
-					x=0;
-					y=0;
-					count1=0;
-					turn=0;
-					//p1=0;
-  					//p2=0;
-					$("#ball").animate({
-						left:'3px'//right:'+=760px'
-					});
-					$("#ball").animate({
-						top:'3px'
-					});
-					alert("Reset Successful!");
-					$("#p2").removeClass("countp1");
-					$("#p1").addClass("countp1");
-					$("#display").val("PLAYER 1");
-					$("#slide").hide();
-					$("#p1").val("0");
-					$("#p2").val("0");
-				});	
-				function check(){
-					if(turn==0) {
-						if($("#ball").css("left")>='950px'&&$("#ball").css("top")>='530px') {
-							alert(pn2+" turn");
-							$("#p1").val(count1);
-							$("#p1").removeClass("countp1");
-							$("#p1").removeClass("countp1");
-							$("#p2").addClass("countp1");
-							$("#display").val("PLAYER 2");
-							turn=1;
-							count1=0;
-							$("#ball").animate({left:'3px'},"slow");
-							$("#ball").animate({top:'3px'},"slow");
-							//alert("win");}
-							if($("#ball").css("left")=='3px') player2();
-						}
-					} else {
-						if($("#ball").css("left")>='950px'&&$("#ball").css("top")>='530px') {
-							var score1=$("#p1").val();
-							var score2=$("#p2").val();
-							if(score1<score2) $("#display").text(pn1+" is winner"); 
-							else if(score1==score2) $("#display").text("DRAW!");
-							else $("#display").text(pn2+"is winner");
-							$("#slide").slideDown("slow");
-						}	
-					}
-				}
-			});
-		</script>
-		<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' >
-		<link rel="stylesheet" href="css/main.css">
-	</head>
-	<body>
-		<div class="container" style="position: fixed;width:1035px;margin-top:30px">
-			<img id="ball" class="ball" src="giphy.gif">
-			<div class="blockR" id="block0" ></div>
-			<div class="blockU" id="block"  ></div>
-			<div class="blockU" id="block1"></div>
-			<div class="blockR" id="block3"></div>
-			<div class="blockU" id="block4"></div>
-			<!--div class="blockR" id="block5"></div-->
-			<div class="blockR" id="block6"></div>
-			<div class="blockR" id="block8"></div>
-			<div class="blockU" id="block7"></div>
-			<div class="blockR" id="block9"></div>
-			<div class="blockU" id="block10"></div>
-			<div class="blockR" id="block11"></div>
-			<div class="blockU" id="block12"></div>
-			<div class="blockR" id="block13"></div>
-			<div class="blockU" id="block14"></div>
-			<div class="blockR" id="block15"></div>
-			<div class="blockU" id="block16"></div>
-			<div class="blockR" id="block17"></div>
-			<div class="blockR" id="block18"></div>
-			<div class="blockR" id="block19"></div>
-			<div class="blockU" id="block20"></div>
-			<div class="blockR" id="block21"></div>
-			<div class="blockR" id="block22"></div>
-			<div class="blockU" id="block23"></div>
-			<div class="blockR" id="block24"></div>
-			<div class="blockU" id="block25"></div>
-			<div class="blockR" id="block26"></div>	
-			<div class="blockU" id="block27"></div>
-			<div class="blockR" id="block28"></div>		
-			<div class="blockU" id="block29"></div>	
-			<div class="blockR" id="block30"></div>
-			<div class="blockU" id="block31"></div>
-			<div class="blockR" id="block32"></div>
-			<div class="blockR" id="block33"></div>
-			<div class="dest" id="dest"></div>
-		</div>
-		<div class="scoreboard" style="margin-top:30px;position: fixed;margin-left: 77%;width:20%;">
-			<h2>Directions</h2>
-			<div class="buttons">
-				<button style="margin-left:64px;margin-bottom:3px;"class="up" id="up"><i class='fas fa-chevron-up'></i></button>
-				<br>
-				<button class="left" id="left" style="margin-right:0px"><i class='fas fa-chevron-left'></i></button>
-				<button class="bottom" id="bottom"><i class='fas fa-chevron-down'></i></button>
-				<button class="right" id="right"><i class='fas fa-chevron-right'></i></button>
-			</div>
-			<br><br><br>
-			<div class="score">
-				<fieldset>
-					<legend>SCORES</legend>
-					<p id="pn1">PLAYER 1</p>
-					<input type="text" id="p1" value="0" class="countp1" readonly>
-					<p id="pn2">PLAYER 2</p>
-					<input type="text" id="p2" value="0" readonly>
-				</fieldset>
-			</div>
-			<div id="slide" style="background-color: green;">
-				<h2 id="display"></h2>
-				<button id="reset" style="width:250px;font-size:29px;margin-left:11px;">RESTART</button>
-			</div>
-		</div>
-	</body>
+
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/app.js"></script>
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'>
+    <link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+    <div class="container" style="position: fixed;width:1035px;margin-top:30px">
+        <img id="ball" class="ball" src="giphy.gif">
+        <div class="blockR" id="block0"></div>
+        <div class="blockU" id="block"></div>
+        <div class="blockU" id="block1"></div>
+        <div class="blockR" id="block3"></div>
+        <div class="blockU" id="block4"></div>
+        <!--div class="blockR" id="block5"></div-->
+        <div class="blockR" id="block6"></div>
+        <div class="blockR" id="block8"></div>
+        <div class="blockU" id="block7"></div>
+        <div class="blockR" id="block9"></div>
+        <div class="blockU" id="block10"></div>
+        <div class="blockR" id="block11"></div>
+        <div class="blockU" id="block12"></div>
+        <div class="blockR" id="block13"></div>
+        <div class="blockU" id="block14"></div>
+        <div class="blockR" id="block15"></div>
+        <div class="blockU" id="block16"></div>
+        <div class="blockR" id="block17"></div>
+        <div class="blockR" id="block18"></div>
+        <div class="blockR" id="block19"></div>
+        <div class="blockU" id="block20"></div>
+        <div class="blockR" id="block21"></div>
+        <div class="blockR" id="block22"></div>
+        <div class="blockU" id="block23"></div>
+        <div class="blockR" id="block24"></div>
+        <div class="blockU" id="block25"></div>
+        <div class="blockR" id="block26"></div>
+        <div class="blockU" id="block27"></div>
+        <div class="blockR" id="block28"></div>
+        <div class="blockU" id="block29"></div>
+        <div class="blockR" id="block30"></div>
+        <div class="blockU" id="block31"></div>
+        <div class="blockR" id="block32"></div>
+        <div class="blockR" id="block33"></div>
+        <div class="dest" id="dest"></div>
+    </div>
+    <div class="scoreboard" style="margin-top:30px;position: fixed;margin-left: 77%;width:20%;">
+        <h2>Directions</h2>
+        <div class="buttons">
+            <button style="margin-left:64px;margin-bottom:3px;" class="up" id="up"><i class='fas fa-chevron-up'></i></button>
+            <br>
+            <button class="left" id="left" style="margin-right:0px"><i class='fas fa-chevron-left'></i></button>
+            <button class="bottom" id="bottom"><i class='fas fa-chevron-down'></i></button>
+            <button class="right" id="right"><i class='fas fa-chevron-right'></i></button>
+        </div>
+        <br><br><br>
+        <div class="score">
+            <fieldset>
+                <legend>SCORES</legend>
+                <p id="pn1">PLAYER 1</p>
+                <input type="text" id="p1" value="0" class="countp1" readonly>
+                <p id="pn2">PLAYER 2</p>
+                <input type="text" id="p2" value="0" readonly>
+            </fieldset>
+        </div>
+        <div id="slide" style="background-color: green;">
+            <h2 id="display"></h2>
+            <button id="reset" style="width:250px;font-size:29px;margin-left:11px;">RESTART</button>
+        </div>
+    </div>
+</body>
+
 </html>
