Move and relink assets

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container" style="position: fixed;width:1035px;margin-top:30px">
-        <img id="ball" class="ball" src="giphy.gif">
+        <img id="ball" class="ball" src="assets/giphy.gif">
         <div class="blockR" id="block0"></div>
         <div class="blockU" id="block"></div>
         <div class="blockU" id="block1"></div>
